@@ -1,3 +1,7 @@
+* 2009/11/04 Guy Martin <gmsoft@tuxicoman.be>
+Fix crash when providing invalid arguments.
+Added README file.
+
 * 2009/10/21 Guy Martin <gmsoft@tuxicoman.be>
 Copy PAT and PMT packets in the output TS file by default.
 
